# DevTrack

./: .gitignore  App.xaml  App.xaml.cpp  App.xaml.h  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  ChatHub.cs  CustomField.cs  DevTrack.csproj  DevTrack.sln  DevTrackStandardTheme.mdd  Extensive feature expansion .txt  LICENSE  MySqlConnectionFactory.cs  Package.appxmanifest  ProjectDashboardData.cs  README.md  Risk.cs  Startup.cs  app.config  app.manifest  db-clear-log-2.txt  db-data-log.txt  db-find-log.txt  file and folder structure .txt  package.json  pch.h  requirements.txt  tsconfig.json  users-check.txt
.github/: coderabbit.yaml  copilot-instructions.md
.github/workflows/: build.yml
DevTrack/: App.xaml.cs
DevTrack.BLL/: Class1.cs  DevTrack.BLL.csproj  ProjectDashboardData.cs  ProjectService.cs
DevTrack.DAL/: DevTrack.DAL.csproj
DevTrack.DAL/Data/: Data.cs
DevTrack.DAL/Models/: Category.cs  CustomField.cs  Project.cs  Risk.cs  Task.cs
DevTrack.DAL/Repositories/: BaseRepository.cs  CommentRepository.cs  DocumentRepository.cs  ExternalIntegrationRepository.cs  IDbConnectionFactory.cs  MilestoneRepository.cs  MySqlCommand.cs  MySqlConnectionFactory.cs  MySqlDataReader.cs  MySqlException.cs  NotificationsRepository.cs  Project.cs  ProjectDependencyRepository.cs  ProjectHistoryRepository.cs  ProjectMapper.cs  ProjectRepository.cs  ReportingRepository.cs  TaskDependencyRepository.cs  TaskMapper.cs  TaskRepository.cs  UserRepository.cs
DevTrack.DAL/Views/: MainWindow.xaml  MainWindow.xaml.cs
DevTrack/Hubs/: ChatHub.cs
DevTrack/Views/: MainWindow.xaml  MainWindow.xaml.cs
Models/: Category.cs  Project.cs  ProjectModel.cpp  ProjectModel.h  Task.cs
Properties/: launchSettings.json
Repositories/: BaseRepository.cs  CommentRepository.cs  DocumentRepository.cs  MilestoneRepository.cs  ProjectDependencyRepository.cs  ProjectRepository.cs  TaskDependencyRepository.cs  UserRepository.cs
Resources/: Strings.resw  Styles.xaml
Services/: ProjectService.cpp  ProjectService.h
ViewModels/: MainViewModel.h
Views/: MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  COMPLETE_IMPLEMENTATION_ANALYSIS.md  CPP23_IMPLEMENTATION_ROADMAP.md  CUSTOM_FIELDS_GUIDE.md  CUSTOM_FIELDS_IMPLEMENTATION.md  DIRECTORY_SCANNER.md  INDEX.md  MIGRATION_PLAN.md  NATIVE_MODULE_MIGRATION.md  NOTIFICATIONS.md  PRODUCTION_OPTIMIZATION_PLAN.md  PROJECT_SUMMARY.md  README.md  RESTRUCTURING_SUMMARY.md  SETTINGS_GUIDE.md  SOLO_USER_ROADMAP.md  TIER3_IMPLEMENTATION.md  TODO.md  VISION_BOARD.md  VISION_BOARD_SUMMARY.md  devtrack-master-features.md
frontend/: index.html  package.json  vite.config.ts
frontend/electron/: main.js  preload.js
frontend/src/main/: main.ts
frontend/src/preload/: preload.ts
frontend/src/renderer/: App.tsx  index.css  main.tsx
include/core/: config_manager.h  project.h  project_manager.h
include/data/: database.h
include/ui/: window.h
scripts/: build-renderer.js  check-data.js  clean.sh  seed-project-voxel.ts  seed-voxel.sql  setup.sh
src/: main.cpp
src/core/: config_manager.cpp  project.cpp  project_manager.cpp
src/data/: database.cpp
src/main/: ApiServer.ts  main.ts
src/main/database/: Database.ts
src/main/models/: Admin.ts  AppSettings.ts  Attachment.ts  AuditLog.ts  AutomationRule.ts  Comment.ts  Compliance.ts  CustomField.ts  Integration.ts  Label.ts  Notification.ts  Permission.ts  Project.ts  ProjectMember.ts  Report.ts  Role.ts  Security.ts  Task.ts  TaskDependency.ts  Template.ts  TimeEntry.ts  User.ts  VisionBoard.ts  WhiteLabel.ts  index.ts
src/main/repositories/: AttachmentRepository.ts  AutomationRuleRepository.ts  CommentRepository.ts  CustomFieldRepository.ts  LabelRepository.ts  NotificationRepository.ts  PermissionRepository.ts  ProjectMemberRepository.ts  ProjectRepository.ts  ProjectTemplateRepository.ts  RoleRepository.ts  TaskDependencyRepository.ts  TaskRepository.ts  TaskTemplateRepository.ts  TimeEntryRepository.ts  UserRepository.ts
src/main/utils/: seed.ts  (+4 more)
src/preload/: preload.ts
src/renderer/: App.tsx  index.html  main.tsx  vite-env.d.ts
src/ui/: window.cpp
tests/: CMakeLists.txt  project_manager_tests.cpp  project_tests.cpp
(+54 files in other folders)
